<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ap_scrollView"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:background="@drawable/et_box_2"
        android:orientation="vertical"
        android:padding="@dimen/padding_normal">

        <com.susankya.rnk.TextViewPlus
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appointment_info"
            android:textSize="@dimen/small_txt_size"
            android:padding="2dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/firstNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:hint="@string/hint_first_name"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords"
                    android:nextFocusRight="@+id/lastName"
                    android:textSize="@dimen/small_txt_size" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/lastNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:hint="@string/hint_last_name"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords"
                    android:nextFocusDown="@+id/telephoneNo"
                    android:textSize="@dimen/small_txt_size" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/telephoneNoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/telephoneNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:hint="@string/hint_telephone"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:nextFocusRight="@+id/mobileNo"
                    android:textSize="@dimen/small_txt_size" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/mobileNoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/mobileNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:hint="@string/hint_mobile"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:nextFocusDown="@+id/txtAddress"
                    android:textSize="@dimen/small_txt_size" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/addressLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/hint_address"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:nextFocusDown="@+id/emailAddress"
                android:textSize="@dimen/small_txt_size" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/emailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/hint_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@+id/spPurposeOfVisit"
                android:textSize="@dimen/small_txt_size" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="2dp"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/purpose_of_visit"
                android:textSize="@dimen/small_txt_size"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spPurposeOfVisit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:layout_weight="2"
                android:drawSelectorOnTop="true"
                android:entries="@array/purpose_of_visit" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/leftLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/hint_evidence_of_id"
                android:textSize="@dimen/small_txt_size"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spEvidence"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:drawSelectorOnTop="true"
                android:entries="@array/evidence_of_id" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/evidenceIdLaoyut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/evidence_of_id_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_evidence_of_id_no"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:nextFocusDown="@+id/message"
                    android:textSize="@dimen/small_txt_size" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="2dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/appointment"
                android:textSize="@dimen/small_txt_size"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spAppointment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:drawSelectorOnTop="true"
                android:entries="@array/appointment" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/my_textbox"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="6dp"
                android:paddingLeft="5dp"
                android:paddingTop="6dp">

                <com.joanzapata.iconify.widget.IconTextView
                    android:id="@+id/datePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/datePicker"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="3dp"
                    android:text="@string/date"
                    android:textSize="@dimen/small_txt_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:background="@drawable/my_textbox"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="6dp"
                android:paddingLeft="5dp"
                android:paddingTop="6dp">

                <com.joanzapata.iconify.widget.IconTextView
                    android:id="@+id/timePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/timePicker"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="3dp"
                    android:text="@string/time"
                    android:textSize="@dimen/small_txt_size" />
            </LinearLayout>
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingLeft="2dp"
            android:text="@string/message"
            android:textSize="@dimen/small_txt_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/my_textbox"
            android:gravity="top"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLines="5"
            android:minLines="1"
            android:padding="5dp"
            android:textSize="@dimen/small_txt_size" />

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="35dp"
            android:background="@color/colorPrimary"
            android:text="@string/submit"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>

