<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:text="Mailing Address"
        android:textColor="@color/colorGrey"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/form_box"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/streetNameNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:hint="@string/street_name"
                    android:imeOptions="actionNext"
                    android:inputType="text|textCapSentences"
                    android:nextFocusForward="@+id/maCity"
                    android:textSize="@dimen/small_txt_size" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/maCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/city"
                    android:imeOptions="actionNext"
                    android:inputType="text|textCapSentences"
                    android:nextFocusForward="@+id/maState"
                    android:textSize="@dimen/small_txt_size" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/maState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:hint="@string/province"
                    android:imeOptions="actionNext"
                    android:inputType="text|textCapSentences"
                    android:nextFocusForward="@+id/maCountry"
                    android:textSize="@dimen/small_txt_size" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/maCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/country_opt"
                    android:imeOptions="actionNext"
                    android:inputType="text|textCapWords"
                    android:nextFocusForward="@+id/maPhone"
                    android:textSize="@dimen/small_txt_size" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/maPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:hint="@string/phone"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:nextFocusForward="@+id/maMobile"
                    android:textSize="@dimen/small_txt_size" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/mobileLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/maMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/mobile"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:nextFocusForward="@+id/maEmail"
                    android:textSize="@dimen/small_txt_size" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/maEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/email_address"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:nextFocusForward="@+id/schoolName"
                android:textSize="@dimen/small_txt_size" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp">

            <TextView
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/is_permanent_address"
                android:textStyle="bold" />
            <CheckBox
                android:id="@+id/is_permanentAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|end|center_vertical"
                android:text="@string/is_permanent_address"/>

            <Spinner
                android:visibility="gone"
                android:id="@+id/spPermanentAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
                android:entries="@array/purpose_of_visit" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>